--- a/gateway/shellhub.conf
+++ b/gateway/shellhub.conf
@@ -25,11 +25,13 @@ server {
         auth_request_set $tenant_id $upstream_http_x_tenant_id;
         auth_request_set $username $upstream_http_x_username;
 	auth_request_set $id $upstream_http_x_id;
+        auth_request_set $authentication_type $upstream_http_x_authentication_type;
         error_page 500 =401 /auth;
         rewrite ^/api/(.*)$ /api/$1 break;
         proxy_set_header X-Tenant-ID $tenant_id;
         proxy_set_header X-Username $username;
 	proxy_set_header X-ID $id;
+	proxy_set_header X-Authentication-Type $authentication_type;
         proxy_pass http://api:8080;
     }
 
